Changed nav login to popup instead of navigating to login page. Added firebase for blog app.

--- a/src/app/apps/blog-app/blog-app.component.css
+++ b/src/app/apps/blog-app/blog-app.component.css
@@ -36,6 +36,11 @@ button {
     margin-top: 15px;
 }
 
+.right {
+    float: right;
+    margin-right: 20px;
+}
+
 /* .card-img {
     width: 100%;
 } */
