--- a/src/app/apps/blog-app/blog-app.component.html
+++ b/src/app/apps/blog-app/blog-app.component.html
@@ -1,14 +1,29 @@
 <section>
-    <div>
-        <h2 class="p-3"><i class="fas fa-blog mr-2"></i>Blogs</h2>
-        <div class="d-flex" *ngIf="auth.afAuth.authState | async as user; else showSignInBtn">
-            <h3 class="flex-grow-1">Hi, {{ user.displayName }}</h3>
-            <button class="btn right" (click)="auth.signOut()">Sign Out</button>
+    <h2 class="p-3"><i class="fas fa-blog mr-2"></i>Blogs</h2>
+    <div class="px-3">
+        <div class="d-flex" *ngIf="bService.afAuth.authState | async as user;">
+            <h4 class="flex-grow-1">Hi, {{ user.displayName || user.email }}</h4>
+            <span class="btn" routerLink="/dashboard">Write a Post</span>
         </div>
     </div>
-    <ng-template #showSignInBtn>
-        <button class="btn right" (click)="auth.signIn()">Login with Google</button>
-    </ng-template>
+    <div class="card-deck mt-4 p-2">
+        <div class="card shadow bg-white rounded" *ngFor="let post of posts | async;">
+            <!-- <img [src]="item.image" alt="Card image cap" class="card-img top"> -->
+            <img src="{{ post.image }}" class="card-img-top" routerLink="{{ post.id }}">
+            <div class="card-body">
+                <h5 class="card-title">{{ post.title }}</h5>
+                <!-- <p class="card-text">{{ post.body }}</p> -->
+                <blockquote class="blockquote mb-0">
+                    <footer class="blockquote-footer"><cite title="Source Title">{{ post.author }}</cite></footer>
+                </blockquote>
+                <div class="d-flex flex-row" *ngIf="bService.afAuth.authState | async as user;">
+                    <div class="flex-grow-1"></div>
+                    <i class="fas fa-trash-alt m-2"></i>
+                    <i class="fas fa-edit m-2"></i>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
 
 
