--- a/src/app/apps/blog-app/blog-post/blog-post.component.html
+++ b/src/app/apps/blog-app/blog-post/blog-post.component.html
@@ -1,9 +1,10 @@
 <section>
-    <h2 class="p-3"><i class="fas fa-blog mr-2"></i>{{ title }}</h2>
+    <!-- <h2 class="p-3"><i class="fas fa-blog mr-2"></i>{{ title }}</h2> -->
     <h3 class="p-2" routerLink="/blogs"><i class="far fa-arrow-alt-circle-left mr-2"></i>Back To Blogs</h3>
-    <div class="body-container d-flex justify-content-center align-items-center">
-        <div [innerHTML]="post" class="body-post mt-4 p-3 d-flex justify-content-center align-items-center flex-column">
-        
-        </div>
+    <div class="body-container p-3" *ngIf="post">
+        <img src="{{ post.image }}" class="mb-3">
+        <h4 class="mb-0">{{ post.title }}</h4>
+        <small>Posted by: {{ post.author }}</small>
+        <p class="mt-4">{{ post.body }}</p>
     </div>
 </section>
