Changed date format for game date and time

--- a/src/app/apps/fbs-scores/fbs-scores.component.html
+++ b/src/app/apps/fbs-scores/fbs-scores.component.html
@@ -6,7 +6,7 @@
         <ul class="list-group list-group-flush mt-4">
             <li class="list-group-item" *ngFor="let game of games;">
                 {{ game.homeTeam }} {{ game.homeScore }} @ {{ game.awayTeam }} {{ game.awayScore }} <br>
-                {{ game.date | date}}
+                {{ game.date | date: 'medium'}}
             </li>
         </ul>
     </div>
