--- a/src/app/apps/blog-app/blog-post/blog-post.component.html
+++ b/src/app/apps/blog-app/blog-post/blog-post.component.html
@@ -4,7 +4,7 @@
     <div class="body-container p-3" *ngIf="post">
         <img src="{{ post.image }}" class="mb-3">
         <h4 class="mb-0">{{ post.title }}</h4>
-        <small>Posted by: {{ post.author }}</small>
+        <small>Posted by: {{ post.author }} - {{ post.published.toDate() | date }}</small>
         <p class="mt-4">{{ post.body }}</p>
     </div>
 </section>
