--- a/src/app/apps/blog-app/blog-app.component.html
+++ b/src/app/apps/blog-app/blog-app.component.html
@@ -1,7 +1,8 @@
 <section>
     <h2 class="p-3"><i class="fas fa-blog mr-2"></i>Blogs</h2>
-    <!-- <button class="btn" (click)="auth.signIn()">signIn</button>
-    <button *ngIf="auth.auth.authState | async as user;" class="btn" (click)="auth.signOut()">signOut</button> -->
+    <button class="btn" (click)="auth.signIn()">signIn</button>
+    <button *ngIf="auth.auth.authState | async as user;" class="btn" (click)="auth.signOut()">signOut</button>
+    {{ user }}
     <div class="px-3">
         <div class="d-flex" *ngIf="auth.auth.authState | async as user;">
             <h4 class="flex-grow-1">Hi, {{ user.displayName || user.email }}</h4>
@@ -12,16 +13,16 @@
         <div class="card shadow bg-white rounded" *ngFor="let post of posts | async;">
             <!-- <img [src]="item.image" alt="Card image cap" class="card-img top"> -->
             <img src="{{ post.image }}" class="card-img-top" routerLink="{{ post.id }}">
-            <div class="card-body">
-                <h5 class="card-title">{{ post.title }}</h5>
+            <div class="card-body d-flex flex-column">
+                <h5 class="card-title flex-grow-1">{{ post.title }}</h5>
                 <!-- <p class="card-text">{{ post.body }}</p> -->
                 <blockquote class="blockquote mb-0">
                     <footer class="blockquote-footer"><cite title="Source Title">{{ post.author }} <br> {{ post.published.toDate() | date }}</cite></footer>
                 </blockquote>
-                <div class="d-flex flex-row" *ngIf="bService.afAuth.authState | async as user;">
+                <div class="d-flex flex-row" *ngIf="user == post.authorId">
                     <div class="flex-grow-1"></div>
-                    <i class="fas fa-trash-alt m-2"></i>
-                    <i class="fas fa-edit m-2"></i>
+                    <i class="fas fa-trash-alt m-2" (click)="deletePost(post.id)"></i>
+                    <!-- <i class="fas fa-edit m-2"></i> -->
                 </div>
             </div>
         </div>
