--- a/src/app/apps/blog-app/blog-app.component.css
+++ b/src/app/apps/blog-app/blog-app.component.css
@@ -3,6 +3,11 @@ h2 {
     color: #fff;
 }
 
+.heading {
+    max-width: 700px;
+    margin: 0px auto;
+}
+
 .popup {
     background-color: rgba(0, 0, 0, 0.5);
     position: absolute;
