Corrected small navbar smooshing items together when expanding apps sections.

--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -22,10 +22,11 @@ h1 {
 }
 
 .drop-down-menu {
+    position: absolute;
+    top: 0;
     background-color: #fff;
     /* margin-top: 50px; */
-    height: 100%;
-    z-index: 1000;
+    z-index: 101;
     overflow: scroll;
 }
 
