--- a/src/app/apps/fbs-scores/fbs-scores.component.html
+++ b/src/app/apps/fbs-scores/fbs-scores.component.html
@@ -4,9 +4,17 @@
         <h3 class="ml-4 mt-3">College Football Scores</h3>
         <h3 class="ml-4 mt-3">Week: {{ week }}</h3>
         <ul class="list-group list-group-flush mt-4">
-            <li class="list-group-item" *ngFor="let game of games;">
-                {{ game.homeTeam }} {{ game.homeScore }} @ {{ game.awayTeam }} {{ game.awayScore }} <br>
-                {{ game.date | date: 'medium'}}
+            <li class="list-group-item d-flex" *ngFor="let game of games;">
+                <div class="flex-grow-1">
+                    {{ game.homeTeam }} {{ game.homeScore }} @ {{ game.awayTeam }} {{ game.awayScore }} <br>
+                    <!-- {{ game.date | date: 'medium'}} -->
+                    <div *ngIf="game.situation">
+                        {{ game.situation }}
+                    </div>
+                </div>
+                <div>
+                    {{ game.status }}
+                </div>
             </li>
         </ul>
     </div>
