--- a/src/app/apps/fbs-scores/fbs-scores.component.html
+++ b/src/app/apps/fbs-scores/fbs-scores.component.html
@@ -4,12 +4,12 @@
         <h3 class="ml-4 mt-3">College Football Scores</h3>
         <h3 class="ml-4 mt-3">Week: {{ week }}</h3>
         <ul class="list-group list-group-flush mt-4">
-            <li class="list-group-item d-flex" *ngFor="let game of games;">
+            <li class="list-group-item d-flex flex-row" *ngFor="let game of games;">
                 <div class="flex-grow-1">
-                    {{ game.homeTeam }} {{ game.homeScore }} @ {{ game.awayTeam }} {{ game.awayScore }} <br>
+                    {{ game.homeTeam }} {{ game.homeScore }} @ {{ game.awayTeam }} {{ game.awayScore }}
                     <!-- {{ game.date | date: 'medium'}} -->
                     <div *ngIf="game.situation">
-                        {{ game.situation }}
+                        {{ game.situation.downDistanceText }} <br> {{ game.situation.lastPlay.text }}
                     </div>
                 </div>
                 <div>
