Added new like service function to increment likes in the db. Updated view to show likes and like button.

--- a/src/app/apps/blog-app/blog-post/blog-post.component.css
+++ b/src/app/apps/blog-app/blog-post/blog-post.component.css
@@ -36,6 +36,18 @@ button {
     width: 100%;
 }
 
+.likes {
+    width: 30%;
+}
+
+.fa-thumbs-up {
+    color: #CD5334;
+}
+
+.fa-thumbs-up:hover {
+    cursor: pointer;
+}
+
 :host ::ng-deep .post-image {
     max-width: 200px;
     margin-bottom: 25px;
