Likes working for all post. Added comment section and functions to add comments in db. All comments are working.

--- a/src/app/apps/blog-app/blog-post/blog-post.component.css
+++ b/src/app/apps/blog-app/blog-post/blog-post.component.css
@@ -48,6 +48,12 @@ button {
     cursor: pointer;
 }
 
+.new-comment {
+    position: relative;
+    height: 100%;
+    width: 100%;   
+}
+
 :host ::ng-deep .post-image {
     max-width: 200px;
     margin-bottom: 25px;
