--- a/src/app/apps/blog-app/blog-post/blog-post.component.html
+++ b/src/app/apps/blog-app/blog-post/blog-post.component.html
@@ -3,20 +3,33 @@
         <!-- <h2 class="p-3"><i class="fas fa-blog mr-2"></i>{{ title }}</h2> -->
         <h3 class="p-2" routerLink="/blogs"><i class="far fa-arrow-alt-circle-left mr-2"></i>Back To Blogs</h3>
         <div class="body-container p-3" *ngIf="post">
-            <i class="fas fa-edit m-2" *ngIf="user == post.authorId" (click)="edit = true"></i>
+            <i class="fas fa-edit m-2" *ngIf="userId == post.authorId" (click)="edit = true"></i>
             <img src="{{ post.image }}" class="mb-3">
             <h4 class="mb-0">{{ post.title }}</h4>
             <small>Posted by: {{ post.author }} - {{ post.published.toDate() | date }}</small>
             <br>
             <small>Likes: {{ post.likes }}</small>
-            <i class="fas fa-thumbs-up" (click)="addLike()"></i>
+            <small class="ml-2" *ngIf="!user">- Sign in to like post</small>
+            <i class="fas fa-thumbs-up" *ngIf="user" (click)="addLike()"></i>
             <p class="mt-4">{{ post.body }}</p>
             <div class="mt-4 comments">
-                <h3>COMMENTS:</h3>
+                <div class="d-flex align-items-center mb-1">
+                    <h3 class="m-0 flex-grow-1">COMMENTS:</h3>
+                    <small *ngIf="!user">Sign in to add comments</small>
+                    <button class="btn m-0" (click)="addComment()" *ngIf="user">{{ !newComment ? 'Add Comment' : 'Cancel' }}</button>
+                </div>
+                <div *ngIf="newComment" class="new-comment">
+                    <textarea class="form-control" name="comment" id="comment" cols="30" rows="10" [(ngModel)]="comment"></textarea>    
+                    <button class="btn" (click)="saveComment()">Save</button>                
+                </div>
                 <ul class="list-group list-group-flush" *ngFor='let c of post.comments'>
                     <li class="list-group-item">
-                        {{ c.date.toDate() | date }}
                         {{ c.text }}
+                        <br>
+                        <small>
+                            {{ c.date.toDate() | date }}
+                            - {{ c.user }}
+                        </small>
                     </li>
                 </ul>
             </div>
@@ -27,6 +40,5 @@
         <textarea class="form-control" name="body" cols="30" rows="10" [(ngModel)]="post.body"></textarea>
         <button class="btn" (click)="editPost()">Save</button>
         <button (click)="edit = false" class="cancelBtn btn">Cancel</button>
-    </div>
-    
+    </div>    
 </section>
