Changed method of getting company when navigating to details page.

--- a/src/app/apps/crm-app/crm-app.component.html
+++ b/src/app/apps/crm-app/crm-app.component.html
@@ -29,7 +29,7 @@
             <li class="list-group-item" *ngFor="let c of contacts; let i = index;">
                 <div class="d-flex flex-row">
                     <!-- <span class="flex-grow-1 mt-1 contact" (click)="contactDetails(c)">{{ c.firstName }} {{ c.lastName }}</span> -->
-                    <span class="flex-grow-1 mt-1 contact" [routerLink]="['/details', { company: c.companyName, street: c.street, city: c.city, state: c.state, zip: c.zip, phone: c.phone, fax: c.fax }]">{{ c.companyName }}</span>
+                    <span class="flex-grow-1 mt-1 contact" routerLink="{{c.id}}">{{ c.companyName }}</span>
                     <i class="far fa-edit m-2" (click)="showForm(c.id)"></i>
                     <i class="far fa-trash-alt m-2" (click)="delete(c.id)"></i>
                 </div>
@@ -39,7 +39,7 @@
             <li class="list-group-item" *ngFor="let c of searchedContacts; let i = index;">
                 <div class="d-flex flex-row">
                     <!-- <span class="flex-grow-1 mt-1 contact" (click)="contactDetails(c)">{{ c.firstName }} {{ c.lastName }}</span> -->
-                    <span class="flex-grow-1 mt-1 contact" [routerLink]="['/details', { company: c.companyName, street: c.street, city: c.city, state: c.state, zip: c.zip, phone: c.phone, fax: c.fax }]">{{ c.company }}</span>
+                    <!-- <span class="flex-grow-1 mt-1 contact" [routerLink]="['/details/{{c.id}}']">{{ c.company }}</span> -->
                     <i class="far fa-edit m-2" (click)="showForm(c.id)"></i>
                     <i class="far fa-trash-alt m-2" (click)="delete(c.id)"></i>
                 </div>
