Changed likes from number to array. Added like and unlike functions. Check to see if user has liked post if true shows thumbs down to remove like if false shows thumbs up to add like.

--- a/src/app/apps/blog-app/blog-app.component.html
+++ b/src/app/apps/blog-app/blog-app.component.html
@@ -23,7 +23,7 @@
                     <div class="flex-grow-1">
                         <span>
                             <i class="fas fa-thumbs-up"></i>
-                            {{ post.likes }}
+                            {{ post.likes.length }}
                         </span>
                         <span>
                             <i class="fas fa-comments"></i>
