--- a/src/app/apps/blog-app/blog-app.component.css
+++ b/src/app/apps/blog-app/blog-app.component.css
@@ -45,6 +45,11 @@ button {
 
 .card {
     width: 100%;
+    height: 340px;
+}
+
+.card-img-top {
+    height: 50%;
 }
 
 .right {
@@ -60,6 +65,7 @@ button {
 
 @media only screen and (min-width: 768px) {
     .card {
-        max-width: 250px;
+        min-width: 320px;
+        max-width: 320px
     }
 }
