--- a/src/app/apps/blog-app/blog-app.component.html
+++ b/src/app/apps/blog-app/blog-app.component.html
@@ -10,7 +10,7 @@
         </div>
     </div>
     <div class="card-deck mt-4 p-2">
-        <div class="card shadow bg-white rounded" *ngFor="let post of posts | async;">
+        <div class="card shadow bg-white rounded mb-2" *ngFor="let post of posts | async;">
             <!-- <img [src]="item.image" alt="Card image cap" class="card-img top"> -->
             <img src="{{ post.image }}" class="card-img-top" routerLink="{{ post.id }}">
             <div class="card-body d-flex flex-column">
