--- a/src/app/apps/blog-app/blog-dashboard/blog-dashboard.component.html
+++ b/src/app/apps/blog-app/blog-dashboard/blog-dashboard.component.html
@@ -22,7 +22,8 @@
                         <div [hidden]="!image" class="mb-2">
                             <img [src]="image || '//:0'">
                         </div>
-                        <input class="form-control mb-2" type="text" placeholder="Title" [(ngModel)]="title">
+                        <input class="form-control" type="text" placeholder="Title" [(ngModel)]="title" maxlength="40">
+                        <small class="mb-2">Title Max 40 Characters</small>
                         <!-- <textarea class="form-control" name="body" cols="30" rows="10" [(ngModel)]="body"></textarea> -->
                         <div [formGroup]="bodyForm">
                             <div formArrayName="para">
