Added hover effect to edit post button. Added break between post and comments. Added break after each comment.

--- a/src/app/apps/blog-app/blog-post/blog-post.component.css
+++ b/src/app/apps/blog-app/blog-post/blog-post.component.css
@@ -59,6 +59,14 @@ button {
     cursor: pointer;
 }
 
+.fa-edit:hover {
+    cursor: pointer;
+}
+
+.break {
+    color: black;
+}
+
 .new-comment {
     position: relative;
     height: 100%;
