--- a/src/app/apps/blog-app/blog-post/blog-post.component.html
+++ b/src/app/apps/blog-app/blog-post/blog-post.component.html
@@ -16,6 +16,7 @@
                 <p>{{ para }}</p>
             </div>
             <!-- <p class="mt-4">{{ post.body }}</p> -->
+            <hr class="break">
             <div class="mt-4 comments">
                 <div class="d-flex align-items-center mb-1">
                     <h3 class="m-0 flex-grow-1">COMMENTS:</h3>
@@ -34,6 +35,7 @@
                             {{ c.date.toDate() | date }}
                             - {{ c.user }}
                         </small>
+                        <hr class="break">
                     </li>
                 </ul>
             </div>
