--- a/src/app/apps/crm-app/contact-details/contact-details.component.html
+++ b/src/app/apps/crm-app/contact-details/contact-details.component.html
@@ -1,6 +1,6 @@
 <section class="details-container">
     <h2 class="p-3"><i class="fas fa-tasks mr-2"></i>Details</h2>
-    <h3 class="p-2" routerLink="/crm"><i class="far fa-arrow-alt-circle-left mr-2"></i>Back To Companies</h3>
+    <h3 class="p-2 back ml-3" routerLink="/crm"><i class="fas fa-chevron-left mr-2"></i>Companies</h3>
     <div class="company p-3" *ngIf="company">
         <div class="company-name">
             <h4>{{ company.companyName }}</h4>
