--- a/src/app/apps/crm-app/contact-details/contact-details.component.html
+++ b/src/app/apps/crm-app/contact-details/contact-details.component.html
@@ -19,7 +19,7 @@
         </div>
     </div>
     <div class="contacts-container">
-        <h3 class="ml-4 mt-3">Contacts<i class="fas fa-plus-square ml-3" (click)="showForm('new')"></i></h3>
+        <h3 class="mt-3">Contacts<i class="fas fa-plus-square ml-3" (click)="showForm('new')"></i></h3>
         <div class="spinner-border text-danger" *ngIf="isLoading" role="status">
             <span class="sr-only">Loading...</span>
         </div>
@@ -65,8 +65,8 @@
             </form>
         </div>
     </div>
-    <div class="task-container p-2">
-        <h3 class="ml-4 mt-3">Leads<i class="fas fa-plus-square ml-3" (click)="showTaskForm('new')"></i></h3>
+    <div class="task-container">
+        <h3 class="mt-3">Leads<i class="fas fa-plus-square ml-3" (click)="showTaskForm('new')"></i></h3>
         <div class="spinner-border text-danger" *ngIf="isLoading" role="status">
             <span class="sr-only">Loading...</span>
         </div>
@@ -101,7 +101,7 @@
                     <input type="text" class="form-control" formControlName="task" required>
                 </div>
                 <div class="form-group">
-                    <label for="service">Stage</label>
+                    <label for="service">Service</label>
                     <select name="service" class="selectpicker form-control" id="service" formControlName="service">
                         <option value="oxygen">Oxygen</option>
                         <option value="overnight">Overnight</option>
