Updated fields for leads: provider, stage and service.

--- a/src/app/apps/crm-app/contact-details/contact-details.component.html
+++ b/src/app/apps/crm-app/contact-details/contact-details.component.html
@@ -101,6 +101,10 @@
                     <input type="text" class="form-control" formControlName="task" required>
                 </div>
                 <div class="form-group">
+                    <label for="provider">Provider</label>
+                    <input type="text" formControlName="provider" class="form-control">
+                </div>
+                <div class="form-group">
                     <label for="service">Service</label>
                     <select name="service" class="selectpicker form-control" id="service" formControlName="service">
                         <option value="oxygen">Oxygen</option>
