--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -24,6 +24,9 @@ h1 {
 .drop-down-menu {
     position: absolute;
     top: 0;
+    right: 0;
+    width: 100%;
+    max-width: 400px;
     background-color: #fff;
     /* margin-top: 50px; */
     z-index: 101;
@@ -32,6 +35,7 @@ h1 {
 
 .links {
     height: 100%;
+    width: 100%;
 }
 
 .drop-down-menu span {
