--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -136,7 +136,7 @@
             <h1 class="ml-2">Chattanooga Web Developer</h1>
         </div>
         <div class="nav-links d-flex flex-row justify-content-around">
-            <div routerLink="/">Home</div>
+            <div class="d-flex flex-column justify-content-center align-items-center" routerLink="/">Home</div>
             <div class="d-flex flex-column justify-content-center align-items-center" (click)="toggleMore('projects')">Web Apps
                 <div class="more-items" *ngIf="projects">
                     <ul class="list-group list-group-flush d-flex flex-row">
@@ -167,11 +167,11 @@
                     </ul>
                 </div>
             </div>
-            <div routerLink="/covid">Covid-19</div>
-            <div routerLink="/contact">Contact Me</div>
-            <div (click)="openFile()">Resume</div>
-            <div *ngIf="!user" (click)="signIn()">Sign In</div>
-            <div *ngIf="user" (click)="signOut()">Sign Out</div>
+            <div class="d-flex flex-column justify-content-center align-items-center" routerLink="/covid">Covid-19</div>
+            <div class="d-flex flex-column justify-content-center align-items-center" routerLink="/contact">Contact Me</div>
+            <div class="d-flex flex-column justify-content-center align-items-center" (click)="openFile()">Resume</div>
+            <div class="d-flex flex-column justify-content-center align-items-center" *ngIf="!user" (click)="signIn()">Sign In</div>
+            <div class="d-flex flex-column justify-content-center align-items-center" *ngIf="user" (click)="signOut()">Sign Out</div>
         </div>
     </section>
 </section>
