Changed indev message. More width to company container.

--- a/src/app/apps/crm-app/crm-app.component.html
+++ b/src/app/apps/crm-app/crm-app.component.html
@@ -72,7 +72,7 @@
         <div class="indev d-flex flex-column align-items-center justify-content-center p-3">
             <div>
                 <h3>Currently in development</h3>
-                <p>Backend not completely implemented. Some features not working or completed.</p>
+                <!-- <p>Backend not completely implemented. Some features not working or completed.</p> -->
                 <p>
                     You are able to add, update and delete companies as well as navigate to company details page.
                     You can add, update, delete company contacts from the details page. Your information will not
